# dotsamaworld

./: .gitignore  Cargo.toml  Earthfile  LICENSE  Makefile  Makefile.toml  README.md  Trunk.toml  fixup.sh  index.html  play2.csv  profile.sh  run.sh  rust-toolchain  rust-toolchain.toml  shell.nix  sm.sh
.cargo/: config  config.toml
.github/workflows/: draft-release.yml  rust.yml
assets/shaders/: instancing.wgsl
crates/emojidot/: Cargo.toml
crates/emojidot/src/: lib.rs
crates/polkadyn/: Cargo.toml  README.md
crates/polkadyn/.github/workflows/: rust.yml
crates/polkadyn/src/: lib.rs  types_that_should_be_defined_somewhere_else.rs
crates/polkapipe/: Cargo.toml  Makefile  README.md  rustfmt.toml
crates/polkapipe/.github/workflows/: rust.yml
crates/polkapipe/chainspecs/: statemint.json
crates/polkapipe/src/: http.rs  lib.rs  rpc.rs  smoldot_std.rs  ws.rs  ws_web.rs
crates/scale-borrow/: Cargo.toml  README.md
crates/scale-borrow/src/: borrow_decode.rs  lib.rs  value.rs
crates/scale-value-to-borrowed/: Cargo.toml  README.md
crates/scale-value-to-borrowed/src/: lib.rs
docs/: arch.md
js/: bable.config.json  bundle-old.js  index.js  package-lock.json  package.json  smoldot-bundled-browserify.js  smoldot-bundled.js  smoldot-bundled2.js  spack.config.js
js/src/: index.js  justsmoldot.js
src/: camera.rs  coded.rs  content.rs  datasource.rs  details.rs  input.rs  instancing.rs  lib.rs  main.rs  movement.rs  networks.rs  recorder.rs  resize.rs  shader.wgsl  style.rs  texture.rs  webworker.rs
src/datasource/: cached_source.rs  cached_source_inc_web.rs  cached_source_indexeddb.rs  mod.rs  raw_source.rs  time_predictor.rs  utils.rs
src/ui/: details.rs  doturl.rs  mod.rs  toggle.rs
