[package]
name = "dotsamaworld"
version = "0.1.1"
authors = []
edition = "2021"
repository = "https://github.com/gilescope/dotsamaworld"
resolver = "2"
default-run = "app"

[features]
default = ["normalmouse"]
# 3d mouse support (it's best not to have both features enabled at once).
spacemouse = ["bevy_spacemouse"]
normalmouse = ["bevy_flycam"]
adaptive-fps = []

[dependencies]
primitive-types = {version="0.11", default-features = false, features=["serde_no_std"]} # alt serde_no_std 
log = {version = "0.4.14", default-features = false }
async-std = { version = "1.12.0", features = [
    # "attributes",
    # "tokio1",
    # "async-channel",
] }
async-trait = "0.1"
async-recursion = "*"
# Not needed since rust 1.63
lazy_static = "*"
futures = {version = "0.3.13", defalult-features=false, features=[] } 
winit = { version = "*", default-features=false, features = ["x11"] }
hex = "*"
#smoldot = { git= "https://github.com/paritytech/smoldot.git", defalult-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
palette = { version = "0.6.1", features=["libm"], default-features = false } # why: git ref as waiting for publish of > 0.6. perceptual color scheme LCH: https://lea.verou.me/2020/04/lch-colors-in-css-what-why-and-how/
fastrand = {version="*",  default-features=false }
#serde_bytes = "0.11"
serde = {version="*",  default-features=false }
serde_json = {version="*",  default-features=false }
url = {version="*",  default-features=false }
# async-tungstenite = "*"
async-tls = {version="*",  default-features=false }
color-eyre = { version = "0.5", default-features = false }

#
# substrate deps
#

# frame-metadata = "15.0.0"
frame-metadata = { git = "https://github.com/integritee-network/frame-metadata.git", default-features = false, features = [
    "v14",
    "full_derive",
] }

scale-info = { version = "*", features = ["serde"] }
scale-value = { git = "https://github.com/gilescope/scale-value", branch = "wasm32" }
# scale-value = {path="/home/gilescope/git/scale-value" }
scale-borrow = { git = "https://github.com/gilescope/scale-borrow", features = [
    "bitvec", "display"
], rev = "f2fe9b4145b4c4a2ffb13da11c6cf3bf0322d444" }
scale-value-to-borrowed = { git = "https://github.com/gilescope/scale-value-to-borrowed", features = [
    "bitvec",
], rev = "986d53abee3ba5f021e52cc096d09a0dc2f3db23" }
# scale-value-to-borrowed = { path = "/home/gilescope/git/scale-value-to-borrowed", features=["bitvec"] }
polkadyn = { git = "https://github.com/gilescope/polkadyn", rev="1da872d87bfe3e560e88ee80ee070b05412b3d8c" }
# polkadyn = { path = "/home/gilescope/git/polkadyn" }
# desub = { git = "https://github.com/paritytech/desub/" }
# desub-current = { git = "https://github.com/paritytech/desub/", branch="giles-metadata-v15" }
# contract-transcode = { git = "https://github.com/paritytech/cargo-contract.git" }


#
# Bevy Dependencies
#
egui = {version="0.18", default-features=false }
egui-datepicker = { git = "https://github.com/gilescope/egui-datepicker.git", branch = "for-project-use", default-features = false }
# egui extras has a date but not time chooser
# egui_extras = { version = "0.18", default-features=false, features=["chrono"] }# features = ["image", "image"] }
# image = { version = "0.24", features = ["jpeg"] }
bevy_flycam = { git = "https://github.com/gilescope/bevy_flycam", optional = true, rev = "c5a2f15" }
bevy_mod_picking = "0.8"
# bevy-inspector-egui-derive = "*"
#bevy_rapier3d = { version = "*", features = [ "simd-nightly", "parallel" ] }

# will be published monday
bevy_atmosphere = { git = "https://github.com/JonahPlusPlus/bevy_atmosphere.git" }
# bevy-inspector-egui = "0.10"

bevy_spacemouse = { git = "https://github.com/gilescope/bevy_spacemouse.git", rev = "8f460d2", optional = true }
bevy_egui = {version="0.15", default-features=false}
# bevy_pkv = "*"
bevy_polyline = "0.3"
# bevy_hanabi = "0.2"
# bevy_kira_audio = "*"
# dolly = "0.3"

[target.'cfg(all(not(target_env = "msvc"),not(target_arch = "wasm32")))'.dependencies]
tikv-jemallocator = "0.5"
# rayon = "*"

#
# Dependencies for native only.
# dynamic
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "*", default-features = false }
bevy = { version = "0.8", default-features = false, features = [
    # "bevy_gltf",
    "bevy_winit",
    "render",
    # "png",
    "jpeg",
] }
# subxt = { git = "https://github.com/paritytech/subxt.git" }
# open = "1"
polkapipe = { git = "https://github.com/gilescope/polkapipe", rev="22faf5099180680eae9118d71b6931352ec6fc10", features = ["wss"]}
# polkapipe = { path = "/Users/bit/p/polkapipe", default-features = false, features = [
#     "wss",
# ] }
async-tungstenite = { version = "0.15.0", default-features = true, features = [
    "async-tls",
    "async-std-runtime",
] }

#
# Dependencies for WASM only.
#
[target.'cfg(target_arch = "wasm32")'.dependencies]
# rexie is for indexeddb web caching
# rexie = "0.4"
console_log = "*"
console_error_panic_hook = "0.1"
chrono = { version = "*", default-features = false, features = ["wasmbind"] }
getrandom = { version = "0.2.7", features = ["wasm-bindgen", "js"] }
#tracing-wasm = "*"
wasm-bindgen = "*"
ws_stream_wasm = "*"
# wasm32 branch
polkapipe = { git = "https://github.com/gilescope/polkapipe", rev="22faf5099180680eae9118d71b6931352ec6fc10", features = ["ws-web"]}
# polkapipe = { path = "/Users/bit/p/polkapipe", default-features = false, features = [
#     "ws-web",
# ] }

# wee_alloc = "0.4.5"
gloo-events = "0.1"
gloo-worker = "0.2.1"
wasm-bindgen-futures = "*"
bevy_web_asset = "0.4"
bevy_tasks = "0.8"
bevy = { version = "0.8", default-features = false, features = [
    # "bevy_gltf",
    "bevy_winit",
    "render",
    # "png",
    "jpeg",
] }
# bevy_webgl2 = "*"
bevy_web_fullscreen = { git = "https://github.com/ostwilkens/bevy_web_fullscreen.git" }

# [patch.'https://github.com/bevyengine/bevy']
# bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}

# [patch.'https://github.com/mrk-its/bevy_webgl2']
# bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="035236b8d7ec52b8e9e20399662e89c73e4521f6", default-features=false}

# [patch.crates-io]
# http-types= {git="https://github.com/http-rs/http-types.git"}
#console_error_panic_hook = { version = "0.1", optional = true }

#smoldot = { git= "https://github.com/paritytech/smoldot.git", defalult-features = false }

#subxt = {git= "https://github.com/paritytech/subxt.git"}


#async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'WebGlRenderingContext',
    'WebGlShader',
    'KeyboardEvent',
    'MouseEvent',
]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
debuginfo = 0
strip="debuginfo" # strip symbols brakes it findong the worker.
codegen-units = 1
panic="abort"
incremental=false


[profile.dev.package.backtrace]
opt-level = 3
