[package]
name = "dotsamaworld"
version = "0.1.1"
authors = []
edition = "2021"
repository = "https://github.com/gilescope/dotsamaworld"
resolver = "2"
default-run = "app"

[features]
default = ["normalmouse"]
# 3d mouse support (it's best not to have both features enabled at once).
spacemouse = []
normalmouse = []
adaptive-fps = []

[dependencies]
glam = "*"
winit = { version = "0.27.3", features = ["x11"] }
cgmath = "0.18"

pollster = "0.2"
egui_wgpu_backend = "0.19"
egui_winit_platform = "0.16"
wgpu = { version = "0.13", features = ["webgl"] }
primitive-types = { version = "0.11", default-features = false, features = [
    "serde_no_std",
] } # alt serde_no_std 
log = { version = "0.4.14", default-features = false }
async-std = { version = "1.12.0", features = [
    # "attributes",
    # "tokio1",
    # "async-channel",
] }
async-trait = "0.1"
async-recursion = "*"
bytemuck = "*"
# Not needed since rust 1.63
lazy_static = "*"
# futures = { version = "0.3.13", default-features = false, features = [] }
# winit = { version = "*", default-features=false, features = ["x11"] }
hex = "*"
#smoldot = { git= "https://github.com/paritytech/smoldot.git", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
palette = { version = "0.6.1", features = [
    "libm",
], default-features = false } # why: git ref as waiting for publish of > 0.6. perceptual color scheme LCH: https://lea.verou.me/2020/04/lch-colors-in-css-what-why-and-how/
fastrand = { version = "*", default-features = false }
#serde_bytes = "0.11"
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
# url = { version = "*", default-features = false }
form_urlencoded = "*"
# async-tungstenite = "*"
# color-eyre = { version = "0.5", default-features = false }
# dashmap = { version = "*" }
open = { git = "https://github.com/gilescope/open-rs.git", rev = "255025b420dbfec81d0c28e67055402e14295921" }
#
# substrate deps
#

# frame-metadata = "15.0.0"
frame-metadata = { git = "https://github.com/integritee-network/frame-metadata.git", default-features = false, features = [
    "v14",
    "full_derive",
] }

scale-info = { version = "*", features = ["serde"] }
scale-value = { git = "https://github.com/gilescope/scale-value", branch = "wasm32", features= ["from_string"] }
# scale-value = {path="/home/gilescope/git/scale-value" }
scale-borrow = { git = "https://github.com/gilescope/scale-borrow", features = [
    "bitvec",
    "display",
], rev = "f2fe9b4145b4c4a2ffb13da11c6cf3bf0322d444" }
scale-value-to-borrowed = { git = "https://github.com/gilescope/scale-value-to-borrowed", features = [
    "bitvec",
], rev = "986d53abee3ba5f021e52cc096d09a0dc2f3db23" }
# scale-value-to-borrowed = { path = "/home/gilescope/git/scale-value-to-borrowed", features=["bitvec"] }
polkadyn = { git = "https://github.com/gilescope/polkadyn", rev = "1da872d87bfe3e560e88ee80ee070b05412b3d8c" }
# polkadyn = { path = "/home/gilescope/git/polkadyn" }
# desub = { git = "https://github.com/paritytech/desub/" }
# desub-current = { git = "https://github.com/paritytech/desub/", branch="giles-metadata-v15" }
# contract-transcode = { git = "https://github.com/paritytech/cargo-contract.git" }

egui = { version = "0.19", default-features = false }
# egui-datepicker = { git = "https://github.com/gilescope/egui-datepicker.git", branch = "for-project-use", default-features = false }
# egui extras has a date but not time chooser
# egui_extras = { version = "0.18", default-features=false, features=["chrono"] }# features = ["image", "image"] }
# image = { version = "0.24", features = ["jpeg"] }

# bevy_flycam = { git = "https://github.com/gilescope/bevy_flycam", optional = true, rev = "6d0adbc6884f8becfed7cd943c1acc85f8743824" }
# bevy_flycam = { path = "/Users/bit/p/bevy_flycam", optional = true }
# bevy_mod_picking = "0.8"

# bevy_spacemouse = { git = "https://github.com/gilescope/bevy_spacemouse.git", rev = "8f460d2", optional = true }
# bevy_polyline = "0.3"

[target.'cfg(all(not(target_env = "msvc"),not(target_arch = "wasm32")))'.dependencies]
tikv-jemallocator = "0.5"

#
# Dependencies for native only.
#
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tls = { version = "*", default-features = false }
futures = { version = "0.3.13", default-features = false, features = [] }
chrono = { version = "*", default-features = false, features = ["clock"]}
polkapipe = { git = "https://github.com/gilescope/polkapipe", rev = "a1a85669791d468b7ed1387feee81c54473e608a", features = [
    "wss",
] }
# polkapipe = { path = "/home/gilescope/git/polkapipe", default-features = false, features = [
#     "wss",
# ] }
async-tungstenite = { version = "0.15.0", default-features = true, features = [
    "async-tls",
    "async-std-runtime",
] }

#
# Dependencies for WASM only.
#
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-events = "*"
# rexie is for indexeddb web caching
# rexie = "0.4"
# console_log = "*"
console_error_panic_hook = "0.1"
chrono = { version = "*", default-features = false, features = ["wasmbind","clock"] }
getrandom = { version = "0.2.7", features = ["wasm-bindgen", "js"] }
#tracing-wasm = "*"
wasm-bindgen = "*"
ws_stream_wasm = "*"
# wasm32 branch
polkapipe = { git = "https://github.com/gilescope/polkapipe", rev = "a1a85669791d468b7ed1387feee81c54473e608a", features = [
    "ws-web",
] }
# polkapipe = { path = "/home/gilescope/git/polkapipe", default-features = false, features = [
#     "ws-web",
# ] }

# wee_alloc = "0.4.5"
gloo-worker = "0.2.1"
wasm-bindgen-futures = "*"
# bevy_web_asset = "0.4"
# bevy_tasks = "0.8"
# bevy_web_fullscreen = { git = "https://github.com/ostwilkens/bevy_web_fullscreen.git" }

# [patch.crates-io]
# http-types= {git="https://github.com/http-rs/http-types.git"}
#console_error_panic_hook = { version = "0.1", optional = true }

#smoldot = { git= "https://github.com/paritytech/smoldot.git", default-features = false }

#subxt = {git= "https://github.com/paritytech/subxt.git"}


#async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'WebGlRenderingContext',
    'WebGlShader',
    'KeyboardEvent',
    'MouseEvent',
]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
debug = false
strip = "debuginfo" # strip symbols brakes it findong the worker.
codegen-units = 1
panic = "abort"
incremental = false

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
panic = "unwind"
incremental = true


[profile.dev.package.backtrace]
opt-level = 3
