[package]
name = "polkadyn"
version = "0.1.0"
edition = "2021"
description = "dynamically decode substrate according to metadata. no network deps. no async deps."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "3.2.1", default-features = false, features = [] }
scale-info = { version= "2.10", default-features = false, features = []  }
scale-value = { workspace = true }
frame-metadata = { version="16.0", default-features = false, features = ["current", "decode"] }

serde_json = { version="1.0", optional = true }
hex = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
wasm-bindgen = "*"
scale-value = { workspace = true }

[dev-dependencies]
polkapipe = { path= "../polkapipe", default-features=false, features=["http", "logging"] }

env_logger = "0.11.3"
async-std = "*"
hex = "0.4"
wasm-bindgen-test = "0.3.0"

[features]
default = ["json"]
json = ["serde_json", "hex"]
