[package]
name = "polkapipe"
description = "Fork of sube focusing purely on communication"
license = "Apache-2.0"
version = "0.8.0"
authors = [
    "Daniel Olano <daniel@olanod.com>",
    "Giles Cope <gilescope@gmail.com>",
]
edition = "2021"
repository = "https://github.com/gilescope/polkapipe"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.14", optional = true }
jsonrpc = { version = "0.12.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

# http backend
surf = { version = "2.3.1", default-features = false, optional = true }

# ws backend
futures-channel = { version = "0.3.17", default-features = false, features = [
    "alloc",
], optional = true }
futures-util = { version = "0.3.17", default-features = false, features = [
    "sink",
], optional = true }
async-mutex = { version = "1.4.0", optional = true }
async-tls = { version = "0.11.0", default-features = false, optional = true }
async-std = { version = "1.10.0", default-features = false, optional = true }

smoldot-light = { version = "0.2", optional = true }
lazy_static = { version = "1.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
], default-features = false }
js-sys = { version = "0.3", features = [], default-features = false }
console_log = { version = "0.2", optional = true }
async-oneshot = "0.5"
pollster = "0.2.5" # needed for block_on in a browser callback
gloo-timers = {version = "0.2.4", features = ["futures"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.19.0", default-features = false, features = [
    "async-std-runtime",
], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
console_error_panic_hook = "^0.1"
async-std = { version = "1.10.0", features = ["attributes"] }
hex-literal = "0.3.3"
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["std", "wss"]
http = ["surf/h1-client-rustls",  "async-std", ]
http-web = ["surf/wasm-client",  "async-std", ]
std = []
ws = [
    "async-std",
    "async-tungstenite",
    "async-mutex",
    "futures-util",
    "futures-channel",
]
logging = ["log", "console_log"]
wss = ["ws", "async-tls", "async-tungstenite/async-tls"]
ws-web = ["async-mutex","async-std/alloc","async-std/std"]
smoldot-std = ["smoldot-light", "futures", "lazy_static", "std", "futures-util",
    "futures-channel", "async-mutex", "async-std", "async-std/alloc","async-std/std"]

[package.metadata.docs.rs]
features = ["http"]
